Tue Jan 20 19:12:18 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* reverts r21693.

Tue Jan 20 18:49:59 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* lib/rdoc/ri/path.rb: Gem::Enable was removed.
	  Use just defined?(Gem).
	  And this prevents unexpected directory creation at
	  installation. [ruby-core:20990]

Tue Jan 20 17:59:52 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* Reverts r21598 and r21599 because the original behavior is
	  intentional.

Tue Jan 20 09:26:05 2009  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/nkf/nkf-utf8/nkf.c (nkf_buf_push): maybe a bug.

	* ext/nkf/nkf-utf8/nkf.c (options): no need to support help option.

Tue Jan 20 06:48:56 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* array.c (take_items), enum.c (enum_zip): tries to convert to
	  array first.  [ruby-core:21442]

Tue Jan 20 03:50:37 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf/nkf-utf8/nkf.c: Update nkf to 2.0.9.
	  revert -s meaning as Shift_JIS, etc.

Mon Jan 19 14:31:59 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* thread.c (rb_thread_execute_interrupts): needs
	  rb_signal_buff_size to be declared.

Mon Jan 19 13:34:25 2009  Koichi Sasada  <ko1@atdot.net>

	* ruby.c (require_libraries): reset th->parse_in_eval while
	  loading libraries.  fixes [ruby-dev:37780]

Sat Jan 17 21:04:27 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* lib/erb.rb: changes style of the rdoc for suppressing
	  warning. [ruby-core:21117] 

Sat Jan 17 17:58:22 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* lib/irb/xmp.rb: multilingualizes XMP::StringInputMethod.
	  [ruby-core:21383].

Sat Jan 17 11:12:21 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* vm_dump.c (vm_stack_dump_each): initialized at declarations.

	* vm_dump.c (rb_vm_bugreport): constified to suppress a warning.

Sat Jan 17 19:33:48 2009  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* configure.in (VCSUP): fixed the cases for git-svn or git.

	* win32/Makefile.sub (VCSUP): ditto.
